--- a/Sharky/Credits.html
+++ b/Sharky/Credits.html
@@ -12,9 +12,13 @@
         </style>
     </head>
     <body>
-        <p>Based on rslight by <a href="mailto:qdc@rogueamoeba.com">Quentin D. Carnicelli</a>, shark by <a href="mailto:michael_rolig@alumni.macalester.edu">Michael Rolig</a> and <a href="mailto:yunke@productivity.org">Justin Yunke</a>, and shark2 by <a href="mailto:shibata@luky.org">Hisaaki Shibata</a>, as refactored by <a href="mailto:ckaiser@floodgap.com">Cameron Kaiser</a>.</p>
+        <p>Based on rslight by <a href="mailto:qdc@rogueamoeba.com">Quentin D. Carnicelli</a>,
+        shark by <a href="mailto:michael_rolig@alumni.macalester.edu">Michael Rolig</a> and <a href="mailto:yunke@productivity.org">Justin Yunke</a>, and
+        shark2 by <a href="mailto:shibata@luky.org">Hisaaki Shibata</a>,
+        as refactored by <a href="mailto:ckaiser@floodgap.com">Cameron Kaiser</a>.</p>
         
-        <p>Includes <a href="https://github.com/spacenation/swiftui-sliders">swiftui-sliders</a> by SpaceNation.</p>
+        <p>Includes <a href="https://github.com/spacenation/swiftui-sliders">swiftui-sliders</a> by SpaceNation and
+        <a href="https://github.com/keefo/NeewerLite/blob/main/NeewerLite/NeewerLite/Spectrogram/AudioSpectrogram.swift">AudioSpectrogram</a> by Xu Lian.</p>
         
         <p><a href="https://www.freepik.com/free-vector/cute-shark-swimming-cartoon-icon-illustration_11167770.htm">Icon</a> by catalyststuff on Freepik.</p>
     </body>
